# AUV_controller

./: CMakeLists.txt  README.md  controlwindow.cpp  controlwindow.h  controlwindow.ui  gazebonode.cpp  gazebonode.h  main.cpp  ros_allowed_topics.conf  ros_gz_bridge.launch.py  ros_gz_bridge.yaml  rosnode.cpp  rosnode.h  uwApplicationTCPwithPosition.tcl
